--- a/portfolio.html
+++ b/portfolio.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>KJ's World</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
+  <head>
+    <title>KJ's world</title>
+     <link rel="stylesheet" href="style.css" />
+  </head>
 
-    <body>
-      <!--All content goes here-->
-      <div id="all-contents">
-        <nav>
-            <h1>KJ's World</h1>
-            <ul id="nav-il">
-                <li class="nav-il">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="nav-li">
-                    <a href="portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </nav>
+  <body>
+    <!-- All content goes here -->
+    <div id="all-contents">
+      <nav>
+     <h1> KJ's world</h1>
+     <ul id="nav-ul">
+    <li class="nav-li">
+     <a href="index.html">Home</a>
+</li>
+<li class="nav-li">
+  <a href="portfolio.html">Portfolio</a>
+   </li>
+</ul>
+</nav>
 
-        <main>
-          <div class="content">
-            <h1>Portfolio</h1>
-            <ul id="portfolio">
-                <li>
-                    <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
-                </li>
-                <li>
-                    <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
-                </li>
-            </ul>
-          </div>
-        </main>
+  <main>
+     <div class="content">
+    <h1>Portfolio</h1>
+    <ul id="portfolio">
+        <li>
+  <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
+</li>
+<li>
+  <a href="fsd-projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+</li>
+<li>
+  <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+</li>
+
+    </ul>
+  </div>
+  </main>
     </div>
-    </body>
+  </body>
 </html>
